--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -27,7 +27,17 @@
                 <%- comment_list[i].get('comment') %>
             </div>
             <div class="check">
-                <a class="red" href="javascript:if(confirm('确认要删除吗?'))location='/comments/delete?id=<%= comment_list[i].get('objectId') %>'" rel="nofollow">删除</a><span class="spacer">•</span>
+                <a class="red" href="javascript:if(confirm('确认要删除吗?'))location='/comments/delete?id=<%= comment_list[i].get('objectId') %>'" rel="nofollow">删除</a>
+
+                <% if (comment_list[i].get('pid')) { %>
+                    <span class="spacer">•</span>
+                    <% if(comment_list[i].get('isNotified')) { %>
+                        <span class="vtime">通知已送达❤</span>
+                    <% } else { %>
+                        <a href="/comments/resend-email?id=<%= comment_list[i].get('objectId') %>" rel="nofollow">重发通知邮件</a>
+                    <% } %>
+                <% } %>
+
             </div>
         </li>
         <% } %>
