恢复Web后台重发邮件功能

--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -38,7 +38,7 @@
                 <% } %>
 
                 <% var url = domain + comment_list[i].get('url') + "#comments" %>
-                <a href="<%= url %>">查看该评论所在文章页面</a>
+                <a href="<%= url %>">查看原文</a>
 
             </div>
         </li>
